--- a/donut.html
+++ b/donut.html
@@ -7,16 +7,8 @@
     <title>Магазин пончиков</title>
 </head>
 <h1 >Мир пончиков</h1>
+<div class="img">
 <img src="/uploads/2023/02/donut.png">
-<style>
-    h1{
-        text-align: center;
-        color: red
-    }
-    img{
-        margin: 0 auto
-    }
-/* Стили пиши здесь :) */
+</div>
 
-</style>
 </html>
