--- a/donut.html
+++ b/donut.html
@@ -7,8 +7,16 @@
     <title>Магазин пончиков</title>
 </head>
 <h1 >Мир пончиков</h1>
-<div class="img">
 <img src="/uploads/2023/02/donut.png">
-</div>
+<style>
+    h1{
+        text-align: center;
+        color: brown
+    }
+    img{
+        margin: 0 auto
+    }
+/* Стили пиши здесь :) */
 
+</style>
 </html>
